[FIX] video links and home hover product repots alignment

--- a/src/Components/AboutUs/Press/Press.css
+++ b/src/Components/AboutUs/Press/Press.css
@@ -1,8 +1,8 @@
 
 
 .newsImg{
-    height: 250px;
-    width: 250px;
+    height: 200px;
+    width: 200px;
     border-radius: 5px;
     margin-left: 16%;
     margin-bottom: 5%;
@@ -10,7 +10,7 @@
 }
 
 .newsDiv{
-    width: 400px;
+    width: 300px; 
     display: flex;
     flex-direction: column;
     margin-top: 5%;
@@ -28,8 +28,8 @@
 }
 .newsPara{
   font-size: 21px;
-  color: #ECA533;
-  opacity: 0.7;
+  color: white;
+  /* opacity: 0.6; */
   text-decoration: none;
 } 
 .newsPara:hover{
