--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -327,7 +327,7 @@
     width: 60%;
 }
 
-.section6Header {
+.section6Header { 
     font-size: 34px;
     font-family: 'Josefin Sans';
     font-weight: 100;
@@ -471,7 +471,8 @@
 }
 
 .bottle-active {
-    box-shadow: 0px 0px 46.4px 0px rgba(255, 160, 19, 1), inset 0px 0px 100.4px 0px rgba(212, 131, 9, 0.726);
+    filter: drop-shadow(0px 0px 25px #ECA533);
+    /* box-shadow: 0px 0px 46.4px 0px rgba(255, 160, 19, 1), inset 0px 0px 100.4px 0px rgba(212, 131, 9, 0.726); */
     transform: scale(1.1);
 }
 
@@ -818,7 +819,8 @@
     }
 
     .bottle-active {
-        box-shadow: #ECA533;
+        /* box-shadow: #ECA533; */
+        filter: drop-shadow(0px 0px 25px #ECA533);
         scale: 0.9;
     }
 
@@ -943,7 +945,8 @@
     }
 
     .bottle-active {
-        box-shadow: 0px 0px 46.4px 0px rgba(255, 160, 19, 1), inset 0px 0px 100.4px 0px rgba(212, 131, 9, 0.726);
+        filter: drop-shadow(0px 0px 25px #ECA533);
+        /* box-shadow: 0px 0px 46.4px 0px rgba(255, 160, 19, 1), inset 0px 0px 100.4px 0px rgba(212, 131, 9, 0.726); */
         transform: scale(0.5);
     }
 
