--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,8 +3,10 @@ nav {
     justify-content: center;
     align-items: center;
     color: white;
+    font-weight: bold;
     position:fixed;
     padding-bottom: 0%;
+    padding-left: 5%;
     padding-top: 5px;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.7);
@@ -26,6 +28,7 @@ nav .title {
 nav ul {
     display: flex;
     align-items: center;
+    font-weight: bold;
 }
 
 nav ul li {
@@ -56,7 +59,7 @@ nav .menu {
     height: 2rem;
 }
  
-nav .menu span {
+nav .menu span { 
     height: 0.1rem;
     width: 100%;
     background-color: #fff;
@@ -101,6 +104,8 @@ nav .menu span {
     display: flex;
     margin-left: 1rem;
     margin-bottom: -1%;
+    filter: brightness(50%);
+    filter: contrast(150%);
 }
 .nav__toggle,
 .nav__close {
@@ -121,6 +126,7 @@ nav .menu span {
     border-color:transparent;
     display: flex;
     box-shadow: none;
+    font-weight: bold;
 }
 .dropdown-liquor{
     display: flex;
@@ -165,7 +171,7 @@ nav ul.dropdown-li:hover {
 .dropdown-about .dropdown-toggle:after {
     display: none;
 }
-
+ 
 .dropdown-about .dropdown-menu {
     background-color: black;
     border-color: #fff;
@@ -175,6 +181,7 @@ nav ul.dropdown-li:hover {
     color: white;
     text-align: left;
     border-color: black;
+    font-weight: bold;
 }
 
 .dropdown-about .dropdown-item:hover {
@@ -275,6 +282,7 @@ nav ul.open:selection{
 
     nav {
         z-index: 5;
+        padding-left:0;
     }
 
     nav ul li {
